# rr-coding-experiments

./: .gitignore  PROJECTS.md  README.md  SETUP.md  fix_python_paths.sh
active-projects/Independent Animated Film Financing Model v1/backend/: .dockerignore  API_ENDPOINTS_IMPLEMENTATION_SUMMARY.md  BUSINESS_RULES_REFACTORING.md  Dockerfile  ENDPOINT_CODE_SUMMARY.md  NEW_OPTIMIZER_ENDPOINTS.md  S_CURVE_INTEGRATION_SUMMARY.md  conftest.py  demo_s_curve_integration.py  pyproject.toml  requirements.txt  test_results.txt
active-projects/Independent Animated Film Financing Model v1/backend/api/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
active-projects/Independent Animated Film Financing Model v1/backend/api/app/: main.py
active-projects/Independent Animated Film Financing Model v1/backend/data/: DATA_SUMMARY.md
active-projects/Independent Animated Film Financing Model v1/backend/data/market/: rate_card_2025.json
active-projects/Independent Animated Film Financing Model v1/backend/data/policies/: AU-PDV-OFFSET-2025.json  AU-PRODUCER-OFFSET-2025.json  CA-FEDERAL-CPTC-2025.json  CA-ON-OCASE-2025.json  CA-QC-PSTC-2025.json  ES-FILM-TAX-CREDIT-2025.json  (+10 more)
active-projects/Independent Animated Film Financing Model v1/backend/examples/: example_capital_stack.json  example_project.json
active-projects/Independent Animated Film Financing Model v1/backend/models/: __init__.py  capital_program.py  capital_stack.py  deal_block.py  financial_instruments.py  incentive_policy.py  project_profile.py  waterfall.py
active-projects/Independent Animated Film Financing Model v1/backend/tests/: test_api_capital_programs.py  test_api_e2e_workflow.py  test_api_scenarios_waterfall.py  test_capital_program.py  test_capital_program_manager.py  test_deal_block.py  test_models.py  test_ownership_control_scorer.py
(+336 files in other folders)
